--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <div class="title">
       <div class="row">
         <div class="col-lg-6 col-sm-12">
-          <h1>Find your ideal laptop! sjfkslfjkljfkaawwrelkj rkaliefiwejflkwjflk</h1>
+          <br><br><br><br><br><br>
+          <h1>FIND YOUR</h1>
+          <h1>IDEAL LAPTOP!</h1>
         </div>
         <div class="col-lg-6 col-sm-12">
           <img id="laptop-main-img" src="images/laptop-main-image.jpg" alt="laptop-main-img">
