--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
     <div class="title">
       <div class="row">
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-6">
           <br><br><br><br><br><br>
           <h1>FIND YOUR</h1>
           <h1>IDEAL LAPTOP!</h1>
         </div>
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-6">
           <img id="laptop-main-img" src="images/laptop-main-image.jpg" alt="laptop-main-img">
         </div>
       </div>
