--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
 
 
-    <div class="title">
+    <div class="title container">
       <div class="row">
         <div class="col-lg-6">
           <br><br><br><br><br><br>
