--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <section id="title">
+  <section class ="container-fluid" id="title">
 
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
@@ -33,7 +33,7 @@
     </nav>
 
 
-    <div class="title container">
+    <div class="title">
       <div class="row">
         <div class="col-lg-6">
           <br><br><br><br><br><br>
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-
+  </section>
     <!-- Title -->
 <!--
     <div>
