--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
 <body>
 
-  <section class ="container-fluid" id="title">
+  <section  id="title">
 
+  <div class="container-fluid">
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+    <nav class="navbar navbar-expand-lg navbar-light " >
       <a class="navbar-brand mb-0 h1" href="#">A-Mart</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,6 +46,7 @@
         </div>
       </div>
     </div>
+  </div>
   </section>
     <!-- Title -->
 <!--
