--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container-fluid">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light " >
-      <a class="navbar-brand mb-0 h1" href="#">A-Mart</a>
+      <a class="navbar-brand h1" href="#">A-Mart</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
